--- a/style.css
+++ b/style.css
@@ -1,338 +1,130 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700;800&display=swap");
-
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
+
 
 body {
-    background-color: #000;
-    color: #fff;
-}
-
-.header {
-    width: 100%;
+    background-image: url(background.jpg);
+    color: #222;
+    font-size: 1rem;
+    /* display: inline; */
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(background.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 10px 8%;
+}
+
+/* .container{
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+} */
+
+.head{
+    display: inline-block    ;
+}
+.container{
+    margin-left: 36%;
+    margin-top: 65px;
+}
+.title {
+    color: #222;
+    font-size: 1.5rem;
+    text-align: center;
+    padding-bottom: 6%;
+    border-bottom: 2px solid #ccc;
+}
+
+.temperature-converter {
+    background: #ecebeb;
+    border-radius: 5px;
     position: relative;
-}
-
-nav {
-    display: flex;
+    display: inline-block;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px 0;
+    justify-content: center;
+    padding-left: 12px;
+    padding: 30px 25px 20px;
+    min-width: 320px;
+    width: 21vw;
+    height: auto;
 }
 
-.logo {
-    width: 200px;
-    cursor: pointer;
+.result {
+    text-align: center;
+    margin: 20px 0;
 }
 
-nav button {
-    border: none;
-    outline: none;
-    background-color: #db0001;
-    color: #fff;
-    padding: 7px 20px;
-    font-size: 12px;
-    border-radius: 4px;
-    margin-left: 10px;
-    cursor: pointer;
+.result-heading {
+    color: #555;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
-.lang-btn {
-    display: inline-flex;
-    align-items: center;
+.result-value {
+    border-bottom: 2px solid #ccc;
+    padding: 10px;
+}
+
+label {
+    color: #555;
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+}
+
+input,select {
     background: transparent;
-    border: 1px solid #fff;
-    padding: 7px 10px;
-}
-
-.lang-btn img {
-    width: 10px;
-    margin-left: 10px;
-} 
-
-.fa-globe {
-    color: #fff;
-    width: 10px;
-    margin-right: 10px;
-}
-
-.header-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-    margin-top: 100px;
-}
-
-.header-content h1 {
-    font-size: 60px;
-    line-height: 70px;
-    font-weight: 600;
-    max-width: 650px;
-}
-
-.header-content h3 {
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-
-.email-signup {
-    background: #fff;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    margin-top: 30px;
-    overflow: hidden;
-}
-
-.email-signup input {
-    flex: 1;
-    border: 0;
-    outline: 0;
-    margin-left: 20px;
-}
-
-.email-signup button {
-    background-color: #db0001;
     border: none;
     outline: none;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 15px 30px;
+    border-bottom: 2px solid #ccc;
+    padding: 8px;
+    margin-bottom: 15px;
 }
 
-
-.features {
-    padding: 50px 12%;
-    font-size: 22px;
+input:focus {
+    border: 1px solid #000000;
 }
 
-.row {
+.degree-type {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    flex-wrap: wrap;
-    padding: 50px 0;
+    padding: 20px 0;
 }
 
-.text-col, .img-col {
-    flex-basis: 50%;
-    margin-bottom: 20px;
-}
-
-.img-col img {
-    display: block;
-    width: 90%;
-    margin: auto;
-}
-
-.features h2 {
-    font-size: 50px;
-    font-weight: 600;
-    margin-bottom: 20px;
-}
-
-.faq {
-    padding: 10px 12%;
-    text-align: center;
-    font-size: 18px;
-}
-
-.faq h2 {
-    font-size: 40px;
-    font-weight: 500;
-}
-
-.accordion {
-    margin: 60px auto;
-    width: 100%;
-    max-width: 750px;
-}
-
-.accordion li {
-    list-style: none;
-    width: 100%;
-    padding: 5px;
-}
-
-.accordion li label {
+.degree-field {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    padding: 20px;
-    font-size: 18px;
-    font-weight: 500;
-    background-color: #303030;
-    margin-bottom: 2px;
+    padding: 20px 0;
+    padding-left: 50%;
+    width: 46%;
+}
+
+option {
+    background-color: #000000;
+    color: #f6f6f6;
+}
+
+#convert-btn {
+    background: linear-gradient(to bottom, yellow, green);
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin-left: 20px;
+    color: #f6f6f6;
     cursor: pointer;
-    position: relative;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    padding: 12px 80px;
+    transition: all 0.3s ease-in;
 }
 
-label::after {
-    content: '+';
-    font-size: 34px;
-    position: absolute;
-    right: 20px;
-    transition: transform 0.5s;
-}
-
-input[type="radio"] {
-    display: none;
-}
-
-.accordion .content {
-    background-color: #303030;
-    text-align: left;
-    padding: 0 20px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s, padding 0.5s;
-}
-
-.accordion input[type="radio"]:checked + label + .content {
-    max-height: 600px;
-    padding: 30px 20px;
-}
-
-.accordion input[type="radio"]:checked + label::after {
-    transform: rotate(135deg);
-}
-
-.faq small {
-    font-size: 13px;
-}
-
-.faq .email-signup {
-    max-width: 600px;
-    margin: 20px auto 60px;
-}
-
-
-.footer {
-    padding: 50px 15% 10px;
-    border-top: 6px solid #333;
-    color: #777;
-}
-
-.footer h2 {
-    font-size: 18px;
-    font-weight: 400;
-    margin-bottom: 30px;
-}
-
-.footer .col {
-    flex-basis: 25%;
-    flex-grow: 1;
-    margin-bottom: 20px;
-}
-
-.footer .col a {
-    display: block;
-    color: #777;
-    font-size: 14px;
-    margin-bottom: 10px;
-    text-decoration: none;
-}
-
-.footer .row {
-    align-items: flex-start;
-    padding: 10px 0px;
-}
-
-.footer .lang-btn {
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 3px;
-}
-
-.copyright-text {
-    font-size: 14px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-
-.feature__backgroud__video feature__3__backgroud__video{
-    max-width: 63%;
-    max-height: 47%;
-    z-index: -2;
-    top: 9%;
-    left: 19%;
-  }
-
-
-
-@media only screen and (max-width: 600px) {
-    .logo {
-        width: 100px;
-    }
-
-    nav button {
-        padding: 5px 10px;
-    }
-
-    nav .lang-btn {
-        padding: 4px 8px;
-    }
-
-    .header-content {
-        position: unset;
-        transform: none;
-        padding-top: 150px;
-    }
-
-    .header-content h1 {
-        font-size: 30px;
-    }
-
-    .email-signup button {
-        font-size: 12px;
-        padding: 10px 15px;
-    }
-
-    .text-col, .img-col {
-        flex-basis: 100%;
-    }
-
-    .features h2 {
-        font-size: 30px;
-    }
-
-    .features p {
-        font-size: 15px;
-    }
-
-    .row:nth-child(2), .row:nth-child(4) {
-        flex-direction: column-reverse;
-    }
-
-    .features .row {
-        padding: 10px 0;
-    }
-
-    .faq h2 {
-        font-size: 20px;
-    }
-
-    .accordion .content {
-        font-size: 14px;
-    }
-
-    .accordion li label {
-        padding: 10px;
-        font-size: 14px;
-    }
-
-    label::after {
-        font-size: 22px;
-    }
+#convert-btn:hover {
+    background: linear-gradient(to bottom, green, yellow);
 }
